--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div class="col-lg-6 col-12 mb-4">
               <ul class="plane-list">
                 <li>
-                  <button class="btn-shape">
+                  <button type="button" class="btn-shape"  data-toggle="modal" data-target="#exampleModal">
                     <img src="assets/images/cart.svg" alt="">
                     <span>Free</span>
                   </button>
@@ -355,7 +355,7 @@
                 </li>
 
                 <li>
-                  <button class="btn-shape">
+                  <button type="button" class="btn-shape"  data-toggle="modal" data-target="#exampleModal">
                     <img src="assets/images/cart.svg" alt="">
                     <span>Silver</span>
                   </button>
@@ -372,7 +372,7 @@
                 </li>
 
                 <li>
-                  <button class="btn-shape">
+                  <button type="button" class="btn-shape"  data-toggle="modal" data-target="#exampleModal">
                     <img src="assets/images/cart.svg" alt="">
                     <span>Gold</span>
                   </button>
@@ -389,7 +389,7 @@
                 </li>
 
                 <li>
-                  <button class="btn-shape">
+                  <button type="button" class="btn-shape"  data-toggle="modal" data-target="#exampleModal">
                     <img src="assets/images/cart.svg" alt="">
                     <span>Platinum</span>
                   </button>
@@ -450,6 +450,35 @@
         </div>
       </section>
     </main>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <form class="from-contain">
+              <h1> اشترك الان </h1>
+
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="اسم العميل" />
+              </div>
+
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="اسم المتجر" />
+              </div>
+
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="رقم الجوال" />
+              </div>
+
+              <button class="btn-shape">
+                <img src="assets/images/cart.svg" alt="">
+                <span>submit</span>
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <div class="container">
