add success pop up

--- a/index.html
+++ b/index.html
@@ -470,11 +470,23 @@
                 <input type="text" class="form-control" placeholder="رقم الجوال" />
               </div>
 
-              <button class="btn-shape">
+              <button type="button" class="btn-shape" data-dismiss="modal" data-toggle="modal" data-target="#DoneModal">
                 <img src="assets/images/cart.svg" alt="">
                 <span>submit</span>
               </button>
             </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="DoneModal" tabindex="-1" aria-labelledby="DoneModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <img src="assets/images/check_icon.svg" alt="">
+
+            <h2 class="head"> تم التسجيل بنجاح </h2>
           </div>
         </div>
       </div>
